v3.1.3 port to 1.20.1