@@ -14,7 +14,7 @@ import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
-import net.neoforged.neoforge.registries.DeferredHolder;
+import net.nikdo53.neobackports.registry.DeferredHolder;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
@@ -91,7 +91,7 @@ public class DimensionRestriction extends AbstractFishRestriction
 
         //single dimension name / [hover]
         if (allowedDimensions.size() == 1)
-            return Component.translatable("dimension." + allowedDimensions.getFirst().toLanguageKey());
+            return Component.translatable("dimension." + allowedDimensions.get(0).toLanguageKey());
         else
             return Component.translatable("gui.guide.hover");
     }
